# Aegis

./: .env.example  .gitignore  CONTRIBUTING.md  Currentprogress.txt  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_projects_tables.py  002_create_documents_tables.py  003_create_jobs_table.py  004_create_job_progress_logs_table.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  citations.py  documents.py  exports.py  health.py  jobs.py  projects.py  providers.py  search.py  ws.py
backend/app/core/: __init__.py  errors.py  exceptions.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  clarification.py  document.py  job.py  job_progress_log.py  project.py
backend/app/providers/: __init__.py  anthropic.py  base.py  google.py  manager.py  ollama.py  openai.py
backend/app/schemas/: __init__.py  advanced_search.py  analytics.py  citation.py  clarification.py  document.py  export.py  health.py  job.py  job_progress.py  paper.py  project.py  provider.py
backend/app/services/: __init__.py  advanced_search.py  analytics.py  chunking.py  citation.py  clarification.py  document.py  embedding.py  export.py  health.py  job.py  job_progress.py  project.py  retrieval.py  summarization.py  tagging.py  ws_manager.py
backend/app/sources/: __init__.py  arxiv.py  base.py  crossref.py  manager.py  openalex.py  pubmed.py  semantic_scholar.py
backend/app/worker/: __init__.py  celery_app.py
backend/app/worker/tasks/: __init__.py  documents.py  maintenance.py  research.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_projects.py  test_providers.py
backend/tests/services/: conftest.py  test_chunking.py  test_citation.py  test_export.py  test_providers.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/analytics/: page.tsx
frontend/app/(dashboard)/jobs/: page.tsx
frontend/app/(dashboard)/projects/: page.tsx
frontend/app/(dashboard)/projects/[id]/: page.tsx
frontend/app/(dashboard)/projects/[id]/clarifications/: page.tsx
frontend/app/(dashboard)/projects/[id]/documents/: page.tsx
frontend/app/(dashboard)/projects/[id]/export/: page.tsx
frontend/app/(dashboard)/projects/[id]/settings/: page.tsx
frontend/app/(dashboard)/projects/new/: page.tsx
frontend/app/(dashboard)/search/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/api/health/: route.ts
frontend/components/layout/: navigation.tsx
frontend/lib/: api-client.ts  use-websocket.ts  utils.ts
frontend/types/: api.ts  index.ts
