[project]
name = "aegis-backend"
version = "0.1.0"
description = "Aegis - Research-focused agentic AI wrapper for academia"
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.worker.tasks.*"
disallow_untyped_defs = false
warn_return_any = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.sources.*"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.citation"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.export"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.tagging"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.summarization"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.embedding"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.retrieval"
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.services.health"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
